--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "uhsse.org",
 	"version": "1.0.0",
 	"description": "A redesign of www.uhsse.org.",
-	"scripts": {},
+	"scripts": {
+		"start": "webpack-dev-server --host 0.0.0.0 --mode=development",
+		"build": "webpack --mode=production"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/UniversityHigh/uhsse.org.git"
@@ -12,5 +15,38 @@
 	"bugs": {
 		"url": "https://github.com/UniversityHigh/uhsse.org/issues"
 	},
-	"homepage": "https://github.com/UniversityHigh/uhsse.org#readme"
+	"homepage": "https://github.com/UniversityHigh/uhsse.org#readme",
+	"devDependencies": {
+		"@babel/core": "^7.1.2",
+		"@babel/plugin-proposal-class-properties": "^7.1.0",
+		"@babel/plugin-transform-for-of": "^7.0.0",
+		"@babel/preset-env": "^7.1.0",
+		"autoprefixer": "^9.1.5",
+		"babel-loader": "^8.0.4",
+		"clean-webpack-plugin": "^0.1.19",
+		"css-loader": "^1.0.0",
+		"cssnano": "^4.1.4",
+		"fast-async": "^7.0.6",
+		"file-loader": "^2.0.0",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.4.3",
+		"node-sass": "^4.9.3",
+		"postcss-loader": "^3.0.0",
+		"pug-html-loader": "^1.1.5",
+		"sass-loader": "^7.1.0",
+		"script-ext-html-webpack-plugin": "^2.0.1",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.20.2",
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "^3.1.9",
+		"webpack-merge": "^4.1.4"
+	},
+	"dependencies": {
+		"animate.css": "^3.7.0",
+		"bootswatch": "^3.3.7",
+		"bulma": "^0.7.1",
+		"core-js": "^2.5.7",
+		"floatthead": "^2.1.2"
+	}
 }
