--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.1.0",
 		"@babel/plugin-transform-for-of": "^7.0.0",
 		"@babel/preset-env": "^7.1.0",
+		"apply-loader": "^2.0.0",
 		"autoprefixer": "^9.1.5",
 		"babel-loader": "^8.0.4",
 		"clean-webpack-plugin": "^0.1.19",
@@ -33,19 +34,21 @@
 		"mini-css-extract-plugin": "^0.4.3",
 		"node-sass": "^4.9.3",
 		"postcss-loader": "^3.0.0",
-		"pug-html-loader": "^1.1.5",
+		"pug": "^2.0.3",
+		"pug-loader": "^2.4.0",
 		"sass-loader": "^7.1.0",
 		"script-ext-html-webpack-plugin": "^2.0.1",
 		"style-loader": "^0.23.1",
+		"url-loader": "^1.1.1",
 		"webpack": "^4.20.2",
 		"webpack-cli": "^3.1.2",
 		"webpack-dev-server": "^3.1.9",
 		"webpack-merge": "^4.1.4"
 	},
 	"dependencies": {
-		"animate.css": "^3.7.0",
-		"bootswatch": "^3.3.7",
+		"@fortawesome/fontawesome-free": "^5.4.0",
 		"bulma": "^0.7.1",
+		"bulma-carousel": "^3.0.0",
 		"core-js": "^2.5.7",
 		"floatthead": "^2.1.2"
 	}
