Replace Bulma Carousel with Siema

--- a/package.json
+++ b/package.json
@@ -47,10 +47,9 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.4.0",
-		"@vizuaalog/bulmajs": "^0.6.0",
 		"bulma": "^0.7.1",
-		"bulma-carousel": "^3.0.0",
 		"core-js": "^2.5.7",
-		"floatthead": "^2.1.2"
+		"floatthead": "^2.1.2",
+		"siema": "^1.5.1"
 	}
 }
