--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"fast-async": "^7.0.6",
 		"file-loader": "^2.0.0",
 		"html-webpack-plugin": "^3.2.0",
-		"image-webpack-loader": "^4.4.0",
+		"imagemin-webpack-plugin": "^2.3.0",
 		"mini-css-extract-plugin": "^0.4.4",
 		"node-sass": "^4.9.4",
 		"postcss-loader": "^3.0.0",
