Replace node-sass with dart-sass and update dependencies

--- a/package.json
+++ b/package.json
@@ -17,42 +17,41 @@
 	},
 	"homepage": "https://github.com/UniversityHigh/uhsse.org#readme",
 	"devDependencies": {
-		"@babel/core": "^7.1.2",
+		"@babel/core": "^7.1.5",
 		"@babel/plugin-proposal-class-properties": "^7.1.0",
 		"@babel/plugin-transform-for-of": "^7.0.0",
-		"@babel/preset-env": "^7.1.0",
+		"@babel/preset-env": "^7.1.5",
 		"apply-loader": "^2.0.0",
-		"autoprefixer": "^9.2.1",
+		"autoprefixer": "^9.3.1",
 		"babel-loader": "^8.0.4",
 		"clean-webpack-plugin": "^0.1.19",
-		"copy-webpack-plugin": "^4.5.4",
-		"css-loader": "^1.0.0",
-		"cssnano": "^4.1.5",
+		"copy-webpack-plugin": "^4.6.0",
+		"css-loader": "^1.0.1",
+		"cssnano": "^4.1.7",
 		"fast-async": "^7.0.6",
 		"file-loader": "^2.0.0",
 		"html-webpack-plugin": "^3.2.0",
 		"imagemin-webpack-plugin": "^2.3.0",
 		"mini-css-extract-plugin": "^0.4.4",
-		"node-sass": "^4.9.4",
 		"postcss-loader": "^3.0.0",
 		"pug": "^2.0.3",
 		"pug-loader": "^2.4.0",
+		"sass": "^1.14.3",
 		"sass-loader": "^7.1.0",
-		"script-ext-html-webpack-plugin": "^2.0.1",
+		"script-ext-html-webpack-plugin": "^2.1.2",
 		"style-loader": "^0.23.1",
 		"url-loader": "^1.1.2",
 		"webapp-webpack-plugin": "^2.3.1",
-		"webpack": "^4.21.0",
+		"webpack": "^4.25.1",
 		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.9",
+		"webpack-dev-server": "^3.1.10",
 		"webpack-merge": "^4.1.4"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^5.4.1",
 		"bulma": "^0.7.2",
 		"core-js": "^2.5.7",
-		"intersection-observer": "^0.5.0",
-		"lozad": "^1.6.0",
+		"intersection-observer": "^0.5.1",
+		"lozad": "^1.7.0",
 		"siema": "^1.5.1"
 	}
 }
