Revert config.json
I found out the actual required field issue: ECE History description field

--- a/src/pages/academics/config.json
+++ b/src/pages/academics/config.json
@@ -36,8 +36,7 @@
         {
           "label": "Anchor ID",
           "name": "anchorId",
-          "widget": "hidden",
-          "required": false
+          "widget": "hidden"
         },
         {
           "label": "Departments",
@@ -127,8 +126,7 @@
         {
           "label": "Anchor ID",
           "name": "anchorId",
-          "widget": "hidden",
-          "required": false
+          "widget": "hidden"
         },
         {
           "label": "Assignments",
