--- a/src/pages/information/config.json
+++ b/src/pages/information/config.json
@@ -244,7 +244,8 @@
 								{
 									"label": "Link",
 									"name": "link",
-									"widget": "string"
+									"widget": "string",
+									"required": false
 								}
 							]
 						},
