--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"css-loader": "^3.2.0",
 		"cssnano": "^4.1.10",
 		"fast-async": "^7.0.6",
+		"favicons-webpack-plugin": "^1.0.2",
 		"file-loader": "^4.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"imagemin-webpack-plugin": "^2.4.2",
@@ -41,7 +42,6 @@
 		"script-ext-html-webpack-plugin": "^2.1.4",
 		"style-loader": "^1.0.0",
 		"url-loader": "^2.2.0",
-		"webapp-webpack-plugin": "^2.7.1",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.9",
 		"webpack-dev-server": "^3.8.2",
