Added welcome video functionality to the website

--- a/src/pages/prospective/config.json
+++ b/src/pages/prospective/config.json
@@ -103,6 +103,11 @@
 					]
 				}
 			]
+		},
+		{
+			"label": "Welcome Video ID (Leave blank to remove video)",
+			"name": "welcomeVideoId",
+			"widget": "string"
 		}
 	]
 }
