--- a/src/pages/academics/config.json
+++ b/src/pages/academics/config.json
@@ -144,6 +144,7 @@
               "widget": "list",
               "required": false,
               "field": {
+                "name": "grade",
                 "label": "Grade",
                 "widget": "number"
               }
