--- a/src/pages/prospective/config.json
+++ b/src/pages/prospective/config.json
@@ -32,7 +32,7 @@
 					"label": "Deadline",
 					"name": "deadline",
 					"widget": "date",
-					"format": "MMM. D"
+					"format": "MMM. D, YYYY"
 				},
 				{
 					"label": "Steps",
