--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"lint:fix": "next lint --fix"
 	},
 	"dependencies": {
-		"next": "13.0.6",
-		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"netlify-cms-app": "^2.15.72",
+		"next": "^13.0.6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@tsconfig/next": "^1.0.4",
@@ -27,5 +28,11 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"typescript": "^4.9.4"
+	},
+	"overrides": {
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	}
 }
