--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "concurrently \"netlify-cms-proxy-server\" \"next dev\" --kill-others-on-fail",
 		"build": "next build",
 		"export": "next export",
 		"start": "next start",
@@ -23,10 +23,12 @@
 		"@types/react-dom": "^18.0.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.1",
 		"@typescript-eslint/parser": "^5.45.1",
+		"concurrently": "^7.6.0",
 		"eslint": "^8.29.0",
 		"eslint-config-next": "^13.0.6",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"netlify-cms-proxy-server": "^1.3.24",
 		"typescript": "^4.9.4"
 	},
 	"overrides": {
