--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 		"lint:fix": "next lint --fix"
 	},
 	"dependencies": {
+		"@chakra-ui/react": "^2.4.3",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"framer-motion": "^7.6.19",
 		"netlify-cms-app": "^2.15.72",
 		"next": "^13.0.6",
 		"react": "^18.2.0",
