--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint": "^8.29.0",
 		"eslint-config-next": "^13.0.6",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-prettier": "^4.2.1",
 		"netlify-cms-proxy-server": "^1.3.24",
 		"typescript": "^4.9.4"
