--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"devDependencies": {
 		"@tsconfig/next": "^1.0.4",
+		"@types/eslint": "^8.4.10",
 		"@types/node": "^18.11.11",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
