--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"eslint-plugin-chakra-ui": "^0.7.6",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-sonarjs": "^0.17.0",
 		"netlify-cms-proxy-server": "^1.3.24",
 		"typescript": "^4.9.4"
 	},
