--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@emotion/styled": "^11.10.5",
 		"framer-motion": "^7.6.19",
 		"netlify-cms-app": "^2.15.72",
-		"next": "^13.0.6",
+		"next": "^13.0.7-canary.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
