--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
 		"@chakra-ui/react": "^2.4.3",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"chakra-ui-markdown-renderer": "^4.1.0",
 		"framer-motion": "^7.6.19",
 		"netlify-cms-app": "^2.15.72",
 		"next": "^13.0.7-canary.4",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-loading-iframe": "^1.1.0",
+		"react-markdown": "^8.0.4"
 	},
 	"devDependencies": {
 		"@tsconfig/next": "^1.0.4",
